[project]
name = "snrg_credit_control"
version = "1.0.0"
description = "Credit Control workflow for Sales Orders — SNRG India"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
